--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hello World
+<html>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <link rel="shortcut icon" href="paper_dragon.ico">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <!-- <link rel="shortcut icon" href="paper_dragon.ico"> -->
+    <title>Tongliang Liu's Homepage </title>
+    <!-- <base href="https://tongliang-liu.github.io/index.html"> -->
+    <!-- <base href="./index.html"> -->
+    
+    <script type="text/javascript" src="//ra.revolvermaps.com/0/0/8.js?i=0gh03rwju0o&amp;m=0&amp;s=170&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33&amp;v0=80" async="async"></script>
+    </head>
+
+<body>
+<table summary="Table for page layout." id="tlayout">
+<tr valign="top">
+<h1 style="padding-left: 0.5em">Tongliang Liu</h1><hr>
+<td id="layout-menu">
+    <div class="menu-item"><a href="index.html">Home</a></div>
+    <div class="menu-item"><a href="groups.html">Group</a></div>
+    <div class="menu-item"><a href="talks.html">Talks</a></div>
+    <div class="menu-item"><a href="teaching.html">Teaching</a></div>
+    <div class="menu-item"><a href="service.html">Service</a></div>
+    <div class="menu-item"><a href="research.html">Research</a></div>
+    <div class="menu-item"><a href="grants.html">Grants</a></div>
+    <div class="menu-item"><a href="publications.html">Publications</a></div>
+    <div class="menu-item"><a href="code.html">Codes & Data</a></div>
+    <div class="menu-item"><a href="award.html">Awards & honours</a></div>
+</td>
+<td id="layout-content">
