--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Gang Niu (Research Scientist at RIKEN-AIP)</title>
+    <title>Jiayi Wu</title>
 </head>
 
 <body>
