--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <a href="#edu">Education</a> ]</p>
 
     <table class="imgtable"><tr valign="top">
-        <td><img src="May2019.jpg" alt="Gang Niu" style="width:auto; height:18em" /></td>
+        <td><img src="personal photo.jpg" alt="Gang Niu" style="width:auto; height:18em" /></td>
         <td align="left">
             <p><span style="font-size: 125%"><b>Gang Niu, D.Eng.</b></span></p>
             <p>
