--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
-<h1 style="padding-left: 0.5em">Gang Niu (Research Scientist at RIKEN-AIP)</h1><hr>
+<h1 style="padding-left: 0.5em">Jiayi Wu</h1><hr>
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html" class="current">Home</a></div>
     <div class="menu-item"><a href="publication.html">Publications</a></div>
@@ -28,9 +28,9 @@
          <a href="#edu">Education</a> ]</p>
 
     <table class="imgtable"><tr valign="top">
-        <td><img src="personal photo.jpg" alt="Gang Niu" style="width:auto; height:18em" /></td>
+        <td><img src="personal photo.jpg" alt="Jiayi Wu" style="width:auto; height:18em" /></td>
         <td align="left">
-            <p><span style="font-size: 125%"><b>Gang Niu, D.Eng.</b></span></p>
+            <p><span style="font-size: 125%"><b>Jiayi Wu, D.Eng.</b></span></p>
             <p>
                 Research Scientist (indefinite-term),<br>
                 Imperfect Information Learning Team,<br>
