--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <table class="imgtable"><tr valign="top">
         <td><img src="personal photo.jpg" alt="Jiayi Wu" style="width:auto; height:18em" /></td>
         <td align="left">
-            <p><span style="font-size: 125%"><b>Jiayi Wu, D.Eng.</b></span></p>
+            <p><span style="font-size: 125%"><b>Jiayi Wu, M.S.</b></span></p>
             <p>
                 Research Scientist (indefinite-term),<br>
                 Imperfect Information Learning Team,<br>
