--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <td align="left">
             <p><span style="font-size: 125%"><b>Jiayi Wu, M.S.</b></span></p>
             <p>
-                Research Scientist (indefinite-term),<br>
+                Master's student (Expected to graduate in spring 2023),<br>
                 Imperfect Information Learning Team,<br>
                 <a href="http://www.riken.jp/en/" target="_blank">RIKEN</a>
                 <a href="http://aip.riken.jp/" target="_blank">Center for Advanced Intelligence Project.</a>
