--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <p><span style="font-size: 125%"><b>Jiayi Wu, M.S.</b></span></p>
             <p>
                 Master's student (Expected to graduate in spring 2023),<br>
-                Electrical and Computer Engineering,<br>
+                Department of Electrical and Computer Engineering,<br>
+                University of Florida,<br>
                 <a href="http://www.riken.jp/en/" target="_blank">RIKEN</a>
                 <a href="http://aip.riken.jp/" target="_blank">Center for Advanced Intelligence Project.</a>
             </p>
