--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 Master's student (Expected to graduate in spring 2023),<br>
                 Department of Electrical and Computer Engineering,<br>
                 University of Florida,<br>
-                <a href="http://www.riken.jp/en/" target="_blank">RIKEN</a>
+                <a href="https://robopi.ece.ufl.edu/" target="_blank">RoboPI</a>
                 <a href="http://aip.riken.jp/" target="_blank">Center for Advanced Intelligence Project.</a>
             </p>
             <p>
@@ -48,7 +48,7 @@
                 1-4-1 Nihonbashi, Chuo-ku, Tokyo 103-0027, Japan.<br>
             </p>
             <p>
-                E-mail: gang.niu.ml at gmail.com<br>
+                E-mail: wuj2@ufl.edu<br>
                 [ <a href="https://scholar.google.co.jp/citations?user=HOkcy00AAAAJ&hl=en" target="_blank">Google Scholar</a>,
                   <a href="https://www.semanticscholar.org/author/Gang-Niu/47537639" target="_blank">Semantic Scholar</a>,
                   <a href="https://dblp.org/pid/26/3367-1.html" target="_blank">DBLP</a> ]
