--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
             <p>
                 Master's student (Expected to graduate in spring 2023),<br>
                 Department of Electrical and Computer Engineering,<br>
-                University of Florida,<br>
-                <a href="https://robopi.ece.ufl.edu/" target="_blank">RoboPI</a>
-                <a href="http://aip.riken.jp/" target="_blank">Center for Advanced Intelligence Project.</a>
+                University of Florida.
             </p>
             <p>
-                Adjunct Professor,<br>
+                Lab:,<br>
+                <a href="https://robopi.ece.ufl.edu/" target="_blank">RoboPI</a>
+                <a href="https://robopi.ece.ufl.edu/people.html" target="_blank">My Profile (in RoboPI)</a>
                 School of Computer Science and Engineering,<br>
                 Southeast University.
             </p>
