--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>
                 Lab:,<br>
                 <a href="https://robopi.ece.ufl.edu/" target="_blank">RoboPI</a>
-                <a href="https://robopi.ece.ufl.edu/people.html" target="_blank">My Profile (in RoboPI)</a>
+                <a href="https://robopi.ece.ufl.edu/people/" target="_blank">My Profile (in RoboPI)</a>
                 School of Computer Science and Engineering,<br>
                 Southeast University.
             </p>
