--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 University of Florida.
             </p>
             <p>
-                Lab:,<br>
+                Lab:<br>
                 <a href="https://robopi.ece.ufl.edu/" target="_blank">RoboPI</a>
-                <a href="https://robopi.ece.ufl.edu/people/" target="_blank">My Profile (in RoboPI)</a>
+                <a href="https://robopi.ece.ufl.edu/people/" target="_blank">My Profile (in RoboPI)</a><br>
                 School of Computer Science and Engineering,<br>
                 Southeast University.
             </p>
