--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
             </p>
             <p>
                 Lab:<br>
-                <a href="https://robopi.ece.ufl.edu/" target="_blank">RoboPI</a>
+                <a href="https://robopi.ece.ufl.edu/" target="_blank">RoboPI</a><br>
                 <a href="https://robopi.ece.ufl.edu/people/" target="_blank">My Profile (in RoboPI)</a><br>
-                School of Computer Science and Engineering,<br>
-                Southeast University.
+                
             </p>
             <p>
                 Nihonbashi 1-chome Mitsui Building, 15th floor,<br>
