--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             </p>
             <p>
                 E-mail: wuj2@ufl.edu<br>
-                [ <a href="https://scholar.google.co.jp/citations?user=HOkcy00AAAAJ&hl=en" target="_blank">Google Scholar</a>,
-                  <a href="https://www.semanticscholar.org/author/Gang-Niu/47537639" target="_blank">Semantic Scholar</a>,
-                  <a href="https://dblp.org/pid/26/3367-1.html" target="_blank">DBLP</a> ]
+                [ <a href="https://github.com/Jiayi-Wu-Leo?tab=repositories" target="_blank">Github</a>,
+                  <a href="https://twitter.com/Jiayi_Wu_Leo" target="_blank">Twitter</a>,
+                  <a href="https://www.linkedin.com/in/jiayi-wu-leo/" target="_blank">Linkedin</a> ]
             </p>
         </td>
     </tr></table>
