--- a/index.html
+++ b/index.html
@@ -69,14 +69,9 @@
     <div>
         <h2><hr><a name="bio"></a>Short Bio</h2>
         <p>
-            Gang Niu is currently an indefinite-term research scientist at RIKEN Center for Advanced Intelligence Project.
-            He received the PhD degree in computer science from Tokyo Institute of Technology in 2013.
-            Before joining RIKEN as a research scientist, he was a senior software engineer at Baidu and then an assistant professor at the University of Tokyo.
-            He has published more than 90 journal articles and conference papers, including 31 ICML, 20 NeurIPS (1 oral and 3 spotlights), and 11 ICLR (1 outstanding paper honorable mention, 2 orals, and 1 spotlight) papers.
-            He has co-authored the book “Machine Learning from Weak Supervision: An Empirical Risk Minimization Approach” (the MIT Press).
-            On the other hand, he has served as an area chair 19 times, including ICLR 2021--2023, ICML 2019--2022, and NeurIPS 2019--2022.
-            He also serves/has served as an action editor of TMLR and a guest editor of a special issue at MLJ.
-            Moreover, he has served as a publication chair for ICML 2022, and has co-organized 11 workshops, 1 competition, and 3 tutorials.
+            Jiayi Wu is a member of the RoboPI lab, he is a master’s student in ECE Department of the University of Florida. 
+            His research focus is on low-cost 3D reconstruction and depth estimation in scattering medium. 
+            He is currently working on his master thesis project under the supervision of Prof. Islam. 
         </p>
     </div>
     
