--- a/publication.html
+++ b/publication.html
@@ -3,11 +3,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Jiayi Wu M.S.</title>
+    <title>Jiayi Wu</title>
 </head>
 
 <body>
-<h1 style="padding-left: 0.5em">Gang Niu (Research Scientist at RIKEN-AIP)</h1><hr>
+<h1 style="padding-left: 0.5em">Jiayi Wu</h1><hr>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
@@ -21,30 +21,11 @@
 <td id="layout-content">
 
     <h1 style="margin-top: 0em">Publications</h1><br>
-    <p>[ <a href="#book">Books</a>,
-         <a href="#preprint">Preprints</a>,
+    <p>[ <a href="#preprint">Preprints</a>,
          <a href="#conference">Conference Papers</a>,
          <a href="#journal">Journal Articles</a>,
          <a href="#thesis">Theses</a> ]</p>
     <p>An asterisk (*) beside authors' names indicates equal contributions.</p>
-
-    <div>
-        <h2><hr><a name="book"></a>Books</h2>
-        <ol>
-            <li><p>
-                M. Sugiyama, H. Bao, T. Ishida, N. Lu, T. Sakai, and G. Niu.<br>
-                <i><a href="http://mitpress.mit.edu/books/machine-learning-weak-supervision" target="_blank">Machine Learning from Weak Supervision: An Empirical Risk Minimization Approach</a></i>,<br>
-                320 pages, <i><a href="http://mitpress.mit.edu/books/series/adaptive-computation-and-machine-learning-series" target="_blank">Adaptive Computation and Machine Learning series</a></i>, The MIT Press, 2022.<br>
-                <font color="#FF0000"><b>(My name is missing from the author list in all retailers due to a system issue of the distributor Penguin Random House;<br>
-                Their information system can only store up to 5 authors who can be received by the retailers from their meta-data feeds)</b></font>
-            </p></li>
-            <li><p>
-                K. Chaudhuri, S. Jegelka, L. Song, C. Szepesvari, G. Niu, S. Sabato (Eds.).<br>
-                <i><a href="http://proceedings.mlr.press/v162/" target="_blank">Proceedings of 39th International Conference on Machine Learning (ICML 2022)</a></i>,<br>
-                27723 pages, Proceedings of Machine Learning Research, vol. 162, 2022.
-            </p></li>
-        </ol>
-    </div>
 
     <div>
         <h2><hr><a name="preprint"></a>Preprints (no review)</h2>
