--- a/publication.html
+++ b/publication.html
@@ -31,69 +31,9 @@
         <h2><hr><a name="preprint"></a>Preprints (no review)</h2>
         <ol>
             <li><p>
-                T. Ishida, I. Yamane, N. Charoenphakdee, G. Niu, and M. Sugiyama.<br>
-                Is the performance of my deep network too good to be true? A direct approach to estimating the Bayes error in binary classification.<br>
-                [ <a href="http://arxiv.org/abs/2202.00395" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                R. Gao, F. Liu, K. Zhou, G. Niu, B. Han, and J. Cheng.<br>
-                Local reweighting for adversarial training.<br>
-                [ <a href="http://arxiv.org/abs/2106.15776" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                Y. Cao, L. Feng, S. Shu, Y. Xu, B. An, G. Niu, and M. Sugiyama.<br>
-                Multi-class classification from single-class data with confidences.<br>
-                [ <a href="http://arxiv.org/abs/2106.08864" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                J. Lv, L. Feng, M. Xu, B. An, G. Niu, X. Geng, and M. Sugiyama.<br>
-                On the robustness of average losses for partial-label learning.<br>
-                [ <a href="http://arxiv.org/abs/2106.06152" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                X. Xia, T. Liu, B. Han, M. Gong, J. Yu, G. Niu, and M. Sugiyama.<br>
-                Instance correction for learning with open-set noisy labels.<br>
-                [ <a href="http://arxiv.org/abs/2106.00455" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                C. Chen*, J. Zhang*, X. Xu, T. Hu, G. Niu, G. Chen, and M. Sugiyama.<br>
-                Guided interpolation for adversarial training.<br>
-                [ <a href="http://arxiv.org/abs/2102.07327" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                J. Zhu*, J. Zhang*, B. Han, T. Liu, G. Niu, H. Yang, M. Kankanhalli, and M. Sugiyama.<br>
-                Understanding the interaction of adversarial training with noisy labels.<br>
-                [ <a href="http://arxiv.org/abs/2102.03482" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                S. Wu*, X. Xia*, T. Liu, B. Han, M. Gong, N. Wang, H. Liu, and G. Niu.<br>
-                Multi-class classification from noisy-similarity-labeled data.<br>
-                [ <a href="http://arxiv.org/abs/2002.06508" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                J. Zhang*, B. Han*, G. Niu, T. Liu, and M. Sugiyama.<br>
-                Where is the bottleneck of adversarial learning with unlabeled data?<br>
-                [ <a href="http://arxiv.org/abs/1911.08696" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                F. Liu, J. Lu, B. Han, G. Niu, G. Zhang, and M. Sugiyama.<br>
-                Butterfly: A panacea for all difficulties in wildly unsupervised domain adaptation.<br>
-                [ <a href="http://arxiv.org/abs/1905.07720" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                C.-Y. Hsieh, M. Xu, G. Niu, H.-T. Lin, and M. Sugiyama.<br>
-                A pseudo-label method for coarse-to-fine multi-label learning with limited supervision.<br>
-                [ <a href="http://openreview.net/forum?id=rylVYjqHdN" target="_blank">OpenReview</a> ]
-            </p></li>
-            <li><p>
-                M. Xu, B. Li, G. Niu, B. Han, and M. Sugiyama.<br>
-                Revisiting sample selection approach to positive-unlabeled learning: Turning unlabeled data into positive rather than negative.<br>
-                [ <a href="http://arxiv.org/abs/1901.10155" target="_blank">arXiv</a> ]
-            </p></li>
-            <li><p>
-                M. Xu, G. Niu, B. Han, I. W. Tsang, Z.-H. Zhou, and M. Sugiyama.<br>
-                Matrix co-completion for multi-label classification with missing features and labels.<br>
-                [ <a href="http://arxiv.org/abs/1805.09156" target="_blank">arXiv</a> ]
+                Boxiao Yu, Jiayi Wu,and Md Jahidul Islam.<br>
+                UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots.<br>
+                [ <a href="https://arxiv.org/abs/2209.12358" target="_blank">arXiv</a> ]
             </p></li>
         </ol>
     </div>
