--- a/publication.html
+++ b/publication.html
@@ -31,9 +31,10 @@
         <h2><hr><a name="preprint"></a>Preprints (no review)</h2>
         <ol>
             <li><p>
-                Boxiao Yu, Jiayi Wu,and Md Jahidul Islam.<br>
-                UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots.<br>
+                B. Yu, J. Wu, and M. J. Islam.<br>
+                 UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots. In review at (ICRA 2023).<br>
                 [ <a href="https://arxiv.org/abs/2209.12358" target="_blank">arXiv</a> ]
+                [ <a href="https://github.com/uf-robopi/UDepth" target="_blank">Code</a> ]
             </p></li>
         </ol>
     </div>
