--- a/publication.html
+++ b/publication.html
@@ -25,7 +25,6 @@
          <a href="#conference">Conference Papers</a>,
          <a href="#journal">Journal Articles</a>,
          <a href="#thesis">Theses</a> ]</p>
-    <p>An asterisk (*) beside authors' names indicates equal contributions.</p>
 
     <div>
         <h2><hr><a name="preprint"></a>Preprints (no review)</h2>
@@ -35,6 +34,7 @@
                  UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots. In review at (ICRA 2023).<br>
                 [ <a href="https://arxiv.org/abs/2209.12358" target="_blank">arXiv</a> ]
                 [ <a href="https://github.com/uf-robopi/UDepth" target="_blank">Code</a> ]
+                [ <a href="https://arxiv.org/pdf/2209.12358.pdf" target="_blank">pre-print</a> ]
             </p></li>
         </ol>
     </div>
