--- a/publication.html
+++ b/publication.html
@@ -31,7 +31,8 @@
         <ol>
             <li><p>
                 B. Yu, J. Wu, and M. J. Islam.<br>
-                 UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots. In review at (ICRA 2023).<br>
+                UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots.<br>
+                In review at (ICRA 2023).<br>
                 [ <a href="https://arxiv.org/abs/2209.12358" target="_blank">arXiv</a> ]
                 [ <a href="https://github.com/uf-robopi/UDepth" target="_blank">Code</a> ]
                 [ <a href="https://arxiv.org/pdf/2209.12358.pdf" target="_blank">pre-print</a> ]
