--- a/index.html
+++ b/index.html
@@ -128,24 +128,16 @@
         <h2><hr><a name="job"></a>Job Experience</h2>
         <ul>
             <li><p>
-                <b>Research Scientist</b>, Since April 2018 (Tenured in October 2020)<br>
-                RIKEN Center for Advanced Intelligence Project, Tokyo, Japan.
+                <b>Digital Audio and Video Algorithm Engineer</b>, May 2022---August 2022<br>
+                Vobile, Santa Clara, CA, United States.
             </p></li>
             <li><p>
-                <b>Visiting Scientist</b>, September 2017--March 2018<br>
-                RIKEN Center for Advanced Intelligence Project, Tokyo, Japan.
+                <b>Graduate Student Assistant</b>, January 2022---present<br>
+                Remote Sensing Laboratory at University of Florida, Gainesville, FL, United States.
             </p></li>
             <li><p>
                 <b>Assistant Professor</b>, September 2015--March 2018<br>
                 Dept. of Complexity Science and Engineering, The University of Tokyo, Tokyo, Japan.
-            </p></li>
-            <li><p>
-                <b>Senior Software Engineer</b>, April 2014--July 2015<br>
-                Dept. of Natural Language Processing, Baidu, Beijing, China.
-            </p></li>
-            <li><p>
-                <b>Postdoctoral Fellow</b>, October 2013--March 2014<br>
-                Dept. of Computer Science, Tokyo Institute of Technology, Tokyo, Japan.
             </p></li>
         </ul>
     </div>
