--- a/index.html
+++ b/index.html
@@ -82,10 +82,13 @@
                 2022/09/15: The paper “<a href="https://arxiv.org/pdf/2209.12358.pdf" target="_blank">UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots</a>” I collaborated with Boxiao Yu and Prof. Islam was submitted to ICRA 2023.
             </p></li>
             <li><p>
-                2022/05/15: 3 papers accepted to ICML 2022.
+                2022/08/23: Completed the summer internship at Vobile and got a return offer (recommended by Dr. Zhao).
             </p></li>
             <li><p>
-                2022/04/20: Our paper “<a href="http://openreview.net/forum?id=EhYjZy6e1gJ" target="_blank">PiCO: Contrastive Label Disambiguation for Partial Label Learning</a>” received an Outstanding Paper Honorable Mention at ICLR 2022.
+                2022/05/23: Joined the team of Dr. Zhao of Vobile as an audio and video algorithm development engineer (summer internship).
+            </p></li>
+            <li><p>
+                2022/01/10: Join Professor Judge's Remote Sensing Lab (as Graduate Student Assistant) and be responsible for the development of a large-scale automated generation of 3D plant models.
             </p></li>
          
         </ul>
