--- a/index.html
+++ b/index.html
@@ -97,9 +97,8 @@
     <div>
         <h2><hr><a name="interest"></a>Research Interests</h2>
         <ul>
-            <li><p><b>Weakly supervised learning</b> (including but not limited to<br>
-                semi-supervised learning, positive-unlabeled learning, and label-noise learning)</p></li>
-            <li><p>Adversarial training and adversarial robustness</p></li>
+            <li><p><b> Low-cost 3D reconstruction and depth estimation in scattering medium</b></p></li>
+            <li><p><b>The application of computer vision in the medical field</b> (including but not limited to medical image processing, pathological image segmentation, image enhancement)</p></li>
             <li><p>Deep learning and representation learning</p></li>
         </ul>
     </div>
