--- a/publication.html
+++ b/publication.html
@@ -40,7 +40,7 @@
         </ol>
     </div>
 
-    <div>
+ <!--<div>
         <h2><hr><a name="conference"></a>Conference Papers (full review)</h2>
         <ol>
             <li><p>
@@ -633,9 +633,9 @@
                 [ <a href="paper/dai_pakdd10.pdf" target="_blank">paper</a> ]
             </p></li>
         </ol>
-    </div>
+    </div>-->
 
-    <div>
+ <!--<div>
         <h2><hr><a name="journal"></a>Journal Articles</h2>
         <ol>
             <li><p>
@@ -741,9 +741,9 @@
                 [ <a href="http://doi.org/10.1007/s11390-011-9417-6" target="_blank">link</a> ]
             </p></li>
         </ol>
-    </div>
+    </div>-->
 
-    <div>
+ <!--<div>
         <h2><hr><a name="thesis"></a>Theses</h2>
         <ol>
             <li><p>
@@ -757,7 +757,7 @@
                 Master Thesis, Department of Computer Science and Technology, Nanjing University, May 2010.
             </p></li>
         </ol>
-    </div>
+    </div>-->
 
 </td>
 </tr>
