--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 
             </p>
             <p>
-                Nihonbashi 1-chome Mitsui Building, 15th floor,<br>
-                1-4-1 Nihonbashi, Chuo-ku, Tokyo 103-0027, Japan.<br>
+                Resume:<br>
+                <a href="https://github.com/Jiayi-Wu-Leo?tab=repositories" target="_blank">Github</a><br>
             </p>
             <p>
                 E-mail: wuj2@ufl.edu<br>
