--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </p>
             <p>
                 Resume:<br>
-                <a href="https://github.com/Jiayi-Wu-Leo?tab=repositories" target="_blank">Github</a><br>
+                <a href="https://github.com/Jiayi-Wu-Leo/Jiayi-Wu-Leo.github.io/blob/main/Master%20period-%20latest%20CV-Jiayi%20WU.pdf" target="_blank">Github</a><br>
             </p>
             <p>
                 E-mail: wuj2@ufl.edu<br>
