--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </p>
             <p>
                 Resume:<br>
-                <a href="Master%20period-%20latest%20CV-Jiayi%20WU.pdf">Master period CV</a><br>
+                <a href="Master period- latest CV-Jiayi WU.pdf">Master period CV</a><br>
             </p>
             <p>
                 E-mail: wuj2@ufl.edu<br>
