--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <p>[ <a href="#bio">Short Bio</a>,
          <a href="#news">News</a>,
          <a href="#interest">Research Interests</a>,
+         <a href="#experiences">Research Experiences</a>,
          <a href="#job">Job Experience</a>,
          <a href="#edu">Education</a> ]</p>
 
@@ -96,6 +97,15 @@
 
     <div>
         <h2><hr><a name="interest"></a>Research Interests</h2>
+        <ul>
+            <li><p><b> Low-cost 3D reconstruction and depth estimation in scattering medium</b></p></li>
+            <li><p><b>The application of computer vision in the medical field</b> (including but not limited to medical image processing, pathological image segmentation, image enhancement)</p></li>
+            <li><p>Deep learning and representation learning</p></li>
+        </ul>
+    </div>
+    
+    <div>
+        <h2><hr><a name="experiences"></a>Research Experiences</h2>
         <ul>
             <li><p><b> Low-cost 3D reconstruction and depth estimation in scattering medium</b></p></li>
             <li><p><b>The application of computer vision in the medical field</b> (including but not limited to medical image processing, pathological image segmentation, image enhancement)</p></li>
