--- a/index.html
+++ b/index.html
@@ -107,7 +107,12 @@
     <div>
         <h2><hr><a name="experiences"></a>Research Experiences</h2>
         <ul>
-            <li><p><b> Low-cost 3D reconstruction and depth estimation in scattering medium</b></p></li>
+            <li><p><b>Underwater 3D reconstruction (Master’s thesis)   January 2022---present</b><br>
+                • Programming an underwater robot with ROS to perform data acquisition tasks underwater.<br>
+                • Realize underwater 3D reconstruction through multi-angle underwater images, and realize fast underwater monocular depth estimation algorithm. 
+                The ultimate goal is to achieve real-time underwater 3D reconstruction and perception.<br>
+                • One paper has been submitted (ICRA2023), the title of the paper is “UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots”.<br>
+                </p></li>
             <li><p><b>The application of computer vision in the medical field</b> (including but not limited to medical image processing, pathological image segmentation, image enhancement)</p></li>
             <li><p>Deep learning and representation learning</p></li>
         </ul>
