--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div>
         <h2><hr><a name="experiences"></a>Research Experiences</h2>
         <ul>
-            <li><p><b>Underwater 3D reconstruction (Master’s thesis)   January 2022---present</b><br>
+            <li><p><b>Underwater 3D reconstruction (Master’s thesis)</b>   ,January 2022---present<br>
                 • Programming an underwater robot with ROS to perform data acquisition tasks underwater.<br>
                 • Realize underwater 3D reconstruction through multi-angle underwater images, and realize fast underwater monocular depth estimation algorithm. 
                 The ultimate goal is to achieve real-time underwater 3D reconstruction and perception.<br>
