--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>
                 Lab:<br>
                 <a href="https://robopi.ece.ufl.edu/" target="_blank">RoboPI</a><br>
-                <a href="https://robopi.ece.ufl.edu/people/" target="_blank">My Profile (in RoboPI)</a><br>
+                <a href="https://robopi.ece.ufl.edu/people.html#Grad" target="_blank">My Profile (in RoboPI)</a><br>
                 
             </p>
             <p>
