--- a/index.html
+++ b/index.html
@@ -113,8 +113,15 @@
                 The ultimate goal is to achieve real-time underwater 3D reconstruction and perception.<br>
                 • One paper has been submitted (ICRA2023), the title of the paper is “UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots”.<br>
                 </p></li>
-            <li><p><b>The application of computer vision in the medical field</b> (including but not limited to medical image processing, pathological image segmentation, image enhancement)</p></li>
-            <li><p>Deep learning and representation learning</p></li>
+            <li><p><b>Digital audio and video algorithm engineer (Summer Internship)</b>   ,May 2022---August 2022<br>
+                • Development of ML-based Video Retrieval Algorithm Based on Global Feature and Local Feature Fusion
+                • Test and develop audio and video fingerprinting and watermarking algorithms (for copyright protection)
+                • Conduct phase-shift auditory tests and improve psychoacoustic models in C and MATLAB (compatible with phase-shift cases)
+                </p></li>
+            <li><p><b>Development of programs for the automatic generation of 3D models in large batches</b>   ,January 2022---present<br>
+                • Generate complex 3D models programmatically.
+                • Connect the program with the database to realize the dynamic real-time 3D model.
+                </p></li>
         </ul>
     </div>
 
