--- a/index.html
+++ b/index.html
@@ -122,6 +122,17 @@
                 • Generate complex 3D models programmatically.
                 • Connect the program with the database to realize the dynamic real-time 3D model.
                 </p></li>
+            <li><p><b>Low-cost driverless car charging pile (Undergraduate Graduation Project)</b>   ,December 2020---June 2021<br>
+                • Completely self-designed a set of low-cost automatic charging solutions for driverless cars.
+                • Independently design a low-cost and expandable spatial location acquisition module, and apply it in 
+                automatic charging piles for driverless cars.
+                • Complete the model prototype building independently, and fully realize the automatic docking and 
+                communication functions of the automatic charging pile and the car charging port.
+                • Graduation design works were invited to participate in the National Engineering Graduation Design 
+                Competition and won the first national individual award (only two people in the country won this award).
+                • For this system, a national invention patent (An automatic charging system and charging docking method 
+                for an unmanned vehicle) has been applied for and is in the approval stage.
+                </p></li>
         </ul>
     </div>
 
