--- a/index.html
+++ b/index.html
@@ -114,24 +114,24 @@
                 • One paper has been submitted (ICRA2023), the title of the paper is “UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots”.<br>
                 </p></li>
             <li><p><b>Digital audio and video algorithm engineer (Summer Internship)</b>   ,May 2022---August 2022<br>
-                • Development of ML-based Video Retrieval Algorithm Based on Global Feature and Local Feature Fusion
-                • Test and develop audio and video fingerprinting and watermarking algorithms (for copyright protection)
-                • Conduct phase-shift auditory tests and improve psychoacoustic models in C and MATLAB (compatible with phase-shift cases)
+                • Development of ML-based Video Retrieval Algorithm Based on Global Feature and Local Feature Fusion<br>
+                • Test and develop audio and video fingerprinting and watermarking algorithms (for copyright protection)<br>
+                • Conduct phase-shift auditory tests and improve psychoacoustic models in C and MATLAB (compatible with phase-shift cases)<br>
                 </p></li>
             <li><p><b>Development of programs for the automatic generation of 3D models in large batches</b>   ,January 2022---present<br>
-                • Generate complex 3D models programmatically.
-                • Connect the program with the database to realize the dynamic real-time 3D model.
+                • Generate complex 3D models programmatically.<br>
+                • Connect the program with the database to realize the dynamic real-time 3D model.<br>
                 </p></li>
             <li><p><b>Low-cost driverless car charging pile (Undergraduate Graduation Project)</b>   ,December 2020---June 2021<br>
-                • Completely self-designed a set of low-cost automatic charging solutions for driverless cars.
+                • Completely self-designed a set of low-cost automatic charging solutions for driverless cars.<br>
                 • Independently design a low-cost and expandable spatial location acquisition module, and apply it in 
-                automatic charging piles for driverless cars.
+                automatic charging piles for driverless cars.<br>
                 • Complete the model prototype building independently, and fully realize the automatic docking and 
-                communication functions of the automatic charging pile and the car charging port.
+                communication functions of the automatic charging pile and the car charging port.<br>
                 • Graduation design works were invited to participate in the National Engineering Graduation Design 
-                Competition and won the first national individual award (only two people in the country won this award).
+                Competition and won the first national individual award (only two people in the country won this award).<br>
                 • For this system, a national invention patent (An automatic charging system and charging docking method 
-                for an unmanned vehicle) has been applied for and is in the approval stage.
+                for an unmanned vehicle) has been applied for and is in the approval stage.<br>
                 </p></li>
         </ul>
     </div>
