--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 • Programming an underwater robot with ROS to perform data acquisition tasks underwater.<br>
                 • Realize underwater 3D reconstruction through multi-angle underwater images, and realize fast underwater monocular depth estimation algorithm. 
                 The ultimate goal is to achieve real-time underwater 3D reconstruction and perception.<br>
-                • One paper has been submitted (ICRA2023), the title of the paper is “UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots”.<br>
+                • One paper has been submitted (ICRA2023), the title of the paper is “<a href="https://arxiv.org/pdf/2209.12358.pdf" target="_blank">UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots</a>”.<br>
                 </p></li>
             <li><p><b>Digital audio and video algorithm engineer (Summer Internship)</b>   ,May 2022---August 2022<br>
                 • Development of ML-based Video Retrieval Algorithm Based on Global Feature and Local Feature Fusion<br>
