--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <ul>
             <li><p><b> Low-cost 3D reconstruction and depth estimation in scattering medium</b></p></li>
             <li><p><b>The application of computer vision in the medical field</b> (including but not limited to medical image processing, pathological image segmentation, image enhancement)</p></li>
-            <li><p>Deep learning and representation learning</p></li>
+            <li><p><b>Deep learning and Robotics</b></p></li>
         </ul>
     </div>
     
