--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <p>
             Jiayi Wu is a member of the RoboPI lab, he is a master’s student in ECE Department of the University of Florida. 
             His research focus is on low-cost 3D reconstruction and depth estimation in scattering medium. 
-            He is currently working on his master thesis project under the supervision of Prof. Islam. 
+            He is currently working on wraping up his master thesis project under the supervision of Prof. Islam. 
+            The primaly research goal of his thesis is to formulate a fast and robust underwater 3D reconstruction algorithm based on the fusion of SfM algorithm and deep learning. 
+            He is also collaboraing with other students across the lab to make it lightweight and deployable on low-power robotic systems.
         </p>
     </div>
     
