--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 2022/08/23: Completed the summer internship at Vobile and got a return offer (recommended by Dr. Zhao).
             </p></li>
             <li><p>
-                2022/05/23: Joined the team of Dr. Zhao of Vobile as an audio and video algorithm development engineer (summer internship).
+                2022/05/23: Joined the team of Dr. Zhao (CTO of Vobile) of Vobile as an audio and video algorithm development engineer (summer internship).
             </p></li>
             <li><p>
                 2022/01/10: Join Professor Judge's Remote Sensing Lab (as Graduate Student Assistant) and be responsible for the development of a large-scale automated generation of 3D plant models.
