--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="menu-item"><a href="talk.html">Invited Talks</a></div>
     <div class="menu-item"><a href="service.html">Professional Services</a></div>
     <div class="menu-item"><a href="https://github.com/uf-robopi/UDepth" target="_blank">Codes and Data</a></div>
-    <div class="menu-item"><a href="misc.html">Miscellaneous</a></div>
+    <!--<div class="menu-item"><a href="misc.html">Miscellaneous</a></div>-->
 </td>
 <td id="layout-content">
 
