--- a/publication.html
+++ b/publication.html
@@ -13,10 +13,10 @@
 <td id="layout-menu">
     <div class="menu-item"><a href="index.html">Home</a></div>
     <div class="menu-item"><a href="publication.html" class="current">Publications</a></div>
-    <div class="menu-item"><a href="talk.html">Invited Talks</a></div>
-    <div class="menu-item"><a href="service.html">Professional Services</a></div>
-    <div class="menu-item"><a href="https://wsl-workshop.github.io/software.html" target="_blank">Codes and Data</a></div>
-    <div class="menu-item"><a href="misc.html">Miscellaneous</a></div>
+    <!--<div class="menu-item"><a href="talk.html">Invited Talks</a></div>-->
+    <!--<div class="menu-item"><a href="service.html">Professional Services</a></div>-->
+    <div class="menu-item"><a href="https://github.com/uf-robopi/UDepth" target="_blank">Codes and Data</a></div>
+    <!--<div class="menu-item"><a href="misc.html">Miscellaneous</a></div>-->
 </td>
 <td id="layout-content">
 
