--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
          <a href="#interest">Research Interests</a>,
          <a href="#experiences">Research Experiences</a>,
          <a href="#job">Job Experience</a>,
-         <a href="#edu">Education</a> ]</p>
+         <a href="#edu">Education</a>,
+         <a href="#service">Academic Services</a>]</p>
 
     <table class="imgtable"><tr valign="top">
         <td><img src="personal photo.jpg" alt="Jiayi Wu" style="width:auto; height:18em" /></td>
@@ -170,6 +171,16 @@
                 <b>Bachelor of Engineering</b>, September 2017 - June 2021<br>
                 Dept. of Mechanical and Electronic Engineering, Zhejiang Sci-Tech University, Hangzhou, China.
             </p></li>
+        </ul>
+    </div>
+    <div>
+        <h2><hr><a name="service"></a>Academic Services</h2>
+        <ul>
+            <b>Reviewer</b>
+            <li><p>
+                Conference: ICRA 2023.
+            </p></li>
+            
         </ul>
     </div>
 </td>
