--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </p>
             <p>
                 Resume:<br>
-                <a href="Master period- latest CV-Jiayi WU.pdf">Master period CV</a><br>
+                <a href="PhD application-CV-Jiayi Wu.pdf">Master period CV</a><br>
             </p>
             <p>
                 E-mail: wuj2@ufl.edu<br>
