--- a/index.html
+++ b/index.html
@@ -101,9 +101,12 @@
     <div>
         <h2><hr><a name="interest"></a>Research Interests</h2>
         <ul>
-            <li><p><b> Low-cost 3D reconstruction and depth estimation in scattering medium</b></p></li>
-            <li><p><b>The application of computer vision in the medical field</b> (including but not limited to medical image processing, pathological image segmentation, image enhancement)</p></li>
-            <li><p><b>Deep learning and Robotics</b></p></li>
+            <li><p><b> General Environment Vision: Make computer vision systems more robust to the environment (scattering media, bad weather).</b></p></li>
+                • Low-cost 3D reconstruction and depth estimation in scattering medium.<br>
+            <li><p><b> The application of computer vision in the medical field</b> (including but not limited to medical image processing, pathological image segmentation, image enhancement)</p></li>
+                • AI-based Surgical Navigation: Make AI have the ability to generate structured diagnostic reports through medical images, and combine NLP algorithms and computer vision technology to achieve surgical navigation.<br>
+            <li><p><b> Medical Robotics</b></p></li>
+                • Surgical robot: Enable surgical robots to have accurate multi-modal fusion perception ability and precise motion control and can perform precise surgery according to the instructions analyzed by doctors or AI.<br>
         </ul>
     </div>
     
