--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
     <div>
         <h2><hr><a name="experiences"></a>Research Experiences</h2>
         <ul>
-            <li><p><b>Underwater 3D reconstruction (Master’s thesis)</b>   ,January 2022---present<br>
-                • Programming an underwater robot with ROS to perform data acquisition tasks underwater.<br>
-                • Realize underwater 3D reconstruction through multi-angle underwater images, and realize fast underwater monocular depth estimation algorithm. 
-                The ultimate goal is to achieve real-time underwater 3D reconstruction and perception.<br>
-                • One paper has been submitted (ICRA2023), the title of the paper is “<a href="https://arxiv.org/pdf/2209.12358.pdf" target="_blank">UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots</a>”.<br>
+            <li><p><b>Underwater 3D Reconstruction and Depth Estimation (Master’s thesis)</b>   ,January 2022---present<br>
+                • Designed an underwater compatible SfM (Structure from motion) pipeline that enhances the robustness of terrestrial SfM to scattering medium environments.<br>
+                • Formulated an novel domain projection module (RMI input space) for rough depth prediction for lowpower embedded devices. Its mathematical part is used as a domain projection loss in Udepth to enforce the pixel-wise underwater attenuation constraints in the holistic learning process.<br>
+                • Formulated a robust and efficient end-to-end model named UDepth, for fast monocular depth estimation by incorporating underwater domain knowledge into its supervised learning pipeline. Submitted one paper on ICRA 2023.
+                the title of the paper is “<a href="https://arxiv.org/pdf/2209.12358.pdf" target="_blank">UDepth: Fast Monocular Depth Estimation for Visually-guided Underwater Robots</a>”.<br>
                 </p></li>
             <li><p><b>Digital audio and video algorithm engineer (Summer Internship)</b>   ,May 2022---August 2022<br>
-                • Development of ML-based Video Retrieval Algorithm Based on Global Feature and Local Feature Fusion<br>
-                • Test and develop audio and video fingerprinting and watermarking algorithms (for copyright protection)<br>
-                • Conduct phase-shift auditory tests and improve psychoacoustic models in C and MATLAB (compatible with phase-shift cases)<br>
+                • Developed and implemented a learning-based video retrieval system based on global feature and local feature fusion. And also wrote the user manual and targeted model performance optimization guidelines document of the system.<br>
+                • Conducted a number of qualitative phase-shift auditory tests and found a relationship between the phase-shift cases and psychoacoustic model.<br>
+                • Upgraded the audio fingerprint encoding algorithm based on the classic psychoacoustic model. The upgraded algorithm can encode not only the sound pressure level of the audio fingerprint but also the threshold of its phase shift. (Implemented in C and MATLAB)<br>
                 </p></li>
             <li><p><b>Development of programs for the automatic generation of 3D models in large batches</b>   ,January 2022---present<br>
                 • Generate complex 3D models programmatically.<br>
