--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
                 • Conducted a number of qualitative phase-shift auditory tests and found a relationship between the phase-shift cases and psychoacoustic model.<br>
                 • Upgraded the audio fingerprint encoding algorithm based on the classic psychoacoustic model. The upgraded algorithm can encode not only the sound pressure level of the audio fingerprint but also the threshold of its phase shift. (Implemented in C and MATLAB)<br>
                 </p></li>
-            <li><p><b>Development of programs for the automatic generation of 3D models in large batches</b>   ,January 2022---present<br>
-                • Generate complex 3D models programmatically.<br>
-                • Connect the program with the database to realize the dynamic real-time 3D model.<br>
+            <li><p><b>Python Toolkit Development in Remote Sensing Lab</b>   ,January 2022---present<br>
+                • Completed 3D model generation code packages for corn and soybean plants, the packages can load data from the database and automatically generate 3D models of plants in large batches.<br>
+                • Toolkit updates and optimizations for speed and data irregularities.<br>
                 </p></li>
-            <li><p><b>Low-cost driverless car charging pile (Undergraduate Graduation Project)</b>   ,December 2020---June 2021<br>
+            <li><p><b>Low-cost Driverless Car Automatic Charging Docking System (Undergraduate Graduation Project)</b>   ,December 2020---June 2021<br>
                 • Completely self-designed a set of low-cost automatic charging solutions for driverless cars.<br>
                 • Independently design a low-cost and expandable spatial location acquisition module, and apply it in 
                 automatic charging piles for driverless cars.<br>
